@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2003/09/10 21:21:30 manu Exp $
+
+SHA1 (fondu_src-030428.tgz) = 1a8875ba4876c514c925c4f8b44efe3249f30448
+Size (fondu_src-030428.tgz) = 90596 bytes
